--- a/1html/.css
+++ b/1html/.css
@@ -15,6 +15,7 @@ body {
 }
 
 #header-text h1 {
+
     color: white;
     text-align: center;
 }
@@ -35,12 +36,73 @@ body {
 
 #header-img {
     margin-right: 40%;
-    float:right;
+    float: right;
     display: inline;
 }
 
 #header-img-style {
     border-radius: 1000px;
     border: solid black 10px;
+
+}
+
+.allTexts {
+    background-color: rgba(255, 255, 255, 0.505);
+    border: 10px;
+    border-color: black;
+    border-style: outset;
+    text-align: center;
+    margin: 60px 30%;
+   
+}
+
+.Textos {
+    color: black;
+    font-size: 14px;
+    font-family: sans-serif;
+}
+
+#exDivAndSpan {
+   
+}
+
+#ex1Div {
+    background-color: green;
+max-width: 1000px;
+float: left;
+}
+
+#ex2Div {
+    background-color: blue;
+    max-width: 1000px;
+    float: right;
+
+}
+
+#style-text{
+    background-color: red;
+}
+.exclass{
+    background-color: pink;
+    text-decoration: none;
+    float: right;
+    font-size: 50px;
+    padding: 10px 20px;
+    margin:2px;
+}
+#exid{
+    background-color: yellow;
+    text-decoration: none;
+    font-size: 50px;
+    padding: 10px 20px;
+    margin: 2px;
+    float: left;
     
+}
+#eximg{
+    
+    margin-left: 40%;
+    border-style: outset;
+    border-color: black;
+    border-radius: 10px;
 }
