--- a/1html/.css
+++ b/1html/.css
@@ -103,6 +103,6 @@ float: left;
     
     margin-left: 40%;
     border-style: outset;
-    border-color: black;
+    border:solid black 10px;
     border-radius: 10px;
 }
