--- a/1html/.css
+++ b/1html/.css
@@ -47,29 +47,30 @@ body {
 }
 
 .allTexts {
+    line-height: 25px;
+    padding: 10px;
     background-color: rgba(255, 255, 255, 0.505);
-    border: 10px;
+    border-width: 10px;
     border-color: black;
     border-style: outset;
     text-align: center;
-    margin: 60px 30%;
-   
+    margin:  60px 30%;
+
 }
 
 .Textos {
+    display: inline;
     color: black;
     font-size: 14px;
     font-family: sans-serif;
 }
 
-#exDivAndSpan {
-   
-}
+
 
 #ex1Div {
     background-color: green;
-max-width: 1000px;
-float: left;
+    max-width: 1000px;
+    float: left;
 }
 
 #ex2Div {
@@ -79,30 +80,47 @@ float: left;
 
 }
 
-#style-text{
+#style-text {
     background-color: red;
 }
-.exclass{
+
+.exclass {
     background-color: pink;
     text-decoration: none;
     float: right;
     font-size: 50px;
     padding: 10px 20px;
-    margin:2px;
+    margin: 2px;
 }
-#exid{
+
+#exid {
     background-color: yellow;
     text-decoration: none;
     font-size: 50px;
     padding: 10px 20px;
     margin: 2px;
     float: left;
-    
+
 }
-#eximg{
+
+#eximg {
     
-    margin-left: 40%;
+    margin-left: 36%;
     border-style: outset;
-    border:solid black 10px;
+    border: solid black 10px;
     border-radius: 10px;
+}
+
+
+
+#ex-overflow{
+   background-color: aqua;
+    width: 400px;
+    height: 300px;
+    overflow-y: auto;
+    overflow-x: auto;
+    margin: auto;
+}
+#overflow-text{
+    text-align: center;
 }
