--- a/1html/.css
+++ b/1html/.css
@@ -13,6 +13,14 @@ body {
     width: 200px;
     display: inline-block;
 }
+li:hover{
+  
+    background-color: rgba(0, 255, 255, 0.396);
+}
+li:active{
+    color: white;
+    
+}
 
 #header-text h1 {
 
@@ -54,7 +62,7 @@ body {
     border-color: black;
     border-style: outset;
     text-align: center;
-    margin:  60px 30%;
+    margin: 60px 30%;
 
 }
 
@@ -104,7 +112,7 @@ body {
 }
 
 #eximg {
-    
+
     margin-left: 36%;
     border-style: outset;
     border: solid black 10px;
@@ -113,14 +121,68 @@ body {
 
 
 
-#ex-overflow{
-   background-color: aqua;
+#ex-overflow {
+    background-color: aqua;
     width: 400px;
     height: 300px;
     overflow-y: auto;
     overflow-x: auto;
     margin: auto;
 }
-#overflow-text{
+
+#overflow-text {
     text-align: center;
 }
+#pseudo-classes ol{
+    text-align: center;
+}
+/*
+#gato-anime {
+    position: absolute;
+    z-index: 1;
+    width: 60%;
+    margin-left: 25%;
+
+}
+
+#gato-deitado {
+    margin-top: 100px;
+    margin-left: 30%;
+    width: 12%;
+    z-index: 2;
+    position: absolute;
+
+}
+
+#gato-danado {
+    width: 100px;
+    
+}
+
+#tags-de-espacamento h2 {
+    position: absolute;
+    z-index: 4;
+
+}
+
+.text-gatinhos {
+    margin-left: 100px;
+    margin-right: 200px;
+    margin-top: 50%;
+    position: absolute;
+
+
+}
+#text-gatinhos2{
+    margin-left: 100px;
+    margin-right: 200px;
+    margin-top: 50%;
+    position: absolute;
+
+
+}
+
+#gatinhos-part{
+    margin-top: 50%;
+}
+
